--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Lifestyle Store</title>
+  <title>G.A.M.Y Store | My Cart</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
@@ -12,9 +12,10 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<link rel="icon" href="images/favicon.ico">
   <style media="screen">
     table{
-      margin-top:30px;
+      margin-top:60px;
       border:1px solid black;
     }
     thead{
@@ -23,6 +24,10 @@
     tbody{
       background-color:#d6e0f0;
     }
+  /* .onhover{
+    text-decoration: underline;
+  } */
+
   </style>
 
 </head>
@@ -33,25 +38,33 @@
   <div class="navbar navbar-inverse navbar-fixed-top header">
     <div class="inner-header">
       <div class="logo">
-        <a href="index.html">Lifestyle Store</a>
+        <a href="index.html"> <img class="websitelogo" src="images/websitelogo1.png" alt="" width="100px" height="100px"> </a>
       </div>
       <div class="signin">
-        <a href="logout.html"> <i class="fa fa-sign-out" aria-hidden="true"></i> Logout</a>
+        <a href="index.html"> <i class="fa fa-sign-out" aria-hidden="true"></i> <h4> Logout</h4></a>
       </div>
 
       <div class="signin">
-        <a href="setting.html"> <i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
+        <a href="setting.html"> <i class="fa fa-cog" aria-hidden="true"></i> <h4> Settings</h4></a>
       </div>
       <div class="signin">
-        <a href="cart.html"> <i class="fa fa-shopping-cart" aria-hidden="true"></i> Carts</a>
+          <a href="wishlist.html" > <i  class="fa fa-heart" aria-hidden="true"></i> <h4> My Wishlist</h4></a>
+      </div>
+      <div class="signin">
+        <a class="onhover current" href="cart.html"> <i class="fa fa-shopping-cart" aria-hidden="true"></i><h4>Carts</h4> </a>
+      </div>
+      <div class="signin">
+          <a href="postlogin.html"> <i  class="fa fa-shopping-bag" aria-hidden="true"></i> <h4>Shop More</h4> </a>
       </div>
 
     </div>
 
   </div></div>
+
   <div class="container">
 
-
+    <br> <br>
+      <hr>  <h3 class="headh1">My Cart</h3>    <hr>
     <table class="table table-dark">
     <thead>
       <tr>
@@ -82,7 +95,7 @@
 <footer>
   <div class="container">
      <center>
-            <p class="footerText">Copyright &copy; Lifestyle Store.All Rights Reserved | Contact Us: +9190000 00000</p>
+            <p class="footerText">Copyright &copy; Lifestyle Store.All Rights Reserved | Contact Us: +91 86559 91140 | To know more: <a href="about.html">Visit Me</a></p>
     </center>
   </div>
 </footer>
