--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Lifestyle Store</title>
+  <title>G.A.M.Y. Store | SignUp</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -11,6 +11,7 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<link rel="icon" href="images/favicon.ico">
   <style media="screen">
     body{
       background-color:#8d93ab;
@@ -24,6 +25,10 @@
     input[type=password]{
       background-color:#d6e0f0;
     }
+    .btn2:hover{
+      color:#000;
+      background-color: white;
+    }
   </style>
 </head>
 
@@ -31,13 +36,13 @@
   <div class="navbar navbar-inverse navbar-fixed-top header">
     <div class="inner-header">
       <div class="logo">
-        <a href="index.html">Lifestyle Store</a>
+        <a href="index.html"> <img class="websitelogo" src="images/websitelogo1.png" alt="" width="100px" height="100px"></a>
       </div>
       <div class="signin">
         <a href="login.html"> <i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
       </div>
       <div class="signin">
-        <a href="signup.html"> <i class="fa fa-user-circle" aria-hidden="true"></i> Sign Up</a>
+        <a href="signup.html" class="current"> <i class="fa fa-user-circle" aria-hidden="true"></i> Sign Up</a>
       </div>
     </div>
 
@@ -81,7 +86,7 @@
 
       </div>
 
-    <button type="submit" class="btn btn-primary"> <a href="postlogin.html">Submit</a></button>
+    <button type="submit" class="btn btn-primary btn2"> <a href="postlogin.html">Submit</a></button>
     </form>
   </div>
 </div>
@@ -89,7 +94,7 @@
 </div>
   <br>
   <footer>
-    <p class="footerText">Copyright &copy; Lifestyle Store.All Rights Reserved | Contact Us: +9190000 00000</p>
+    <p class="footerText">Copyright &copy; Lifestyle Store.All Rights Reserved | Contact Us: +91 86559 91140 |To know more: <a href="about.html">Visit Me</a> </p>
   </footer>
   </body>
 
