--- a/wishlist.html
+++ b/wishlist.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>G.A.M.Y Store | Settings</title>
+  <title>G.A.M.Y Store | My Wishlist</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
@@ -13,11 +13,23 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 <link rel="icon" href="images/favicon.ico">
-   <style media="screen">
-     form{
-       margin-top:40px;
-     }
-   </style>
+  <style media="screen">
+    table{
+      margin-top:60px;
+      border:1px solid black;
+    }
+    thead{
+      background-color:#f1f3f8;
+    }
+    tbody{
+      background-color:#d6e0f0;
+    }
+  /* .onhover{
+    text-decoration: underline;
+  } */
+
+  </style>
+
 </head>
 <body>
   <div class="container">
@@ -33,10 +45,10 @@
       </div>
 
       <div class="signin">
-        <a href="setting.html" class="current"> <i class="fa fa-cog" aria-hidden="true"></i> <h4> Settings</h4></a>
+        <a href="setting.html"> <i class="fa fa-cog" aria-hidden="true"></i> <h4> Settings</h4></a>
       </div>
       <div class="signin">
-          <a href="wishlist.html" > <i  class="fa fa-heart" aria-hidden="true"></i> <h4> My Wishlist</h4></a>
+          <a href="wishlist.html" class="current"> <i  class="fa fa-heart" aria-hidden="true"></i> <h4> My Wishlist</h4></a>
       </div>
       <div class="signin">
         <a class="onhover" href="cart.html"> <i class="fa fa-shopping-cart" aria-hidden="true"></i><h4>Carts</h4> </a>
@@ -44,37 +56,41 @@
       <div class="signin">
           <a href="postlogin.html"> <i  class="fa fa-shopping-bag" aria-hidden="true"></i> <h4>Shop More</h4> </a>
       </div>
-
     </div>
 
   </div></div>
-  <div class="container form">
-    <!-- <div class="row"> -->
-        <!-- <div class="col-xs-4 col-lg-12 col-xs-offset-4"> -->
-     <br> <br>
-  <hr>   <h3 class="headh1">Change Password</h3><hr>
-    <form>
 
-    <div class="form-group">
-      <!-- <label for="exampleInputPassword1">Password</label> -->
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Old Password">
-    </div>
-    <div class="form-group">
-      <!-- <label for="exampleInputPassword1">Password</label> -->
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="New Password">
-    </div>
-    <div class="form-group">
-      <!-- <label for="exampleInputPassword1">Password</label> -->
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Re-type New Password">
-    </div>
+  <div class="container">
 
+    <br> <br>
+      <hr>  <h3 class="headh1">My Wishlist</h3>    <hr>
+    <table class="table table-dark">
+    <thead>
+      <tr>
+        <th scope="col">Item Number</th>
+        <th scope="col">Item Name</th>
+        <th scope="col">Item price</th>
+        <th scope="col"> </th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- <tr>
+        <th scope="row"></th>
+        <td> </td>
+        <td> </td>
+        <td> </td>
+      </tr> -->
+      <tr>
+        <th scope="row"> </th>
+        <td>Total</td>
+        <td>Rs. 0/-</td>
+        <td> <a href="success.html" class="btn btn-primary"> Confirm Order </a> </td>
+      </tr>
 
-    <button type="submit" class="btn btn-primary btn2">Change Password</button>
-    </form>
-  </div>
-<!-- </div>
-</div> -->
-<br><br><br><br><br><br><br><br><br><br><br>
+    </tbody>
+  </table>
+</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <footer>
   <div class="container">
      <center>
