--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="logo">
         <a  href="index.html"> <img class="websitelogo" src="images/websitelogo1.png" alt="" width="100px" height="100px"> </a>
       </div>
-      <!-- <div class="signin">
+       <div class="signin">
         <a href="about.html"> <i class="fa fa-globe" aria-hidden="true"></i> About Website</a>
-      </div> -->
+      </div> 
       <div class="signin">
         <a href="login.html"> <i class="fa fa-sign-in" aria-hidden="true"></i> Login</a>
       </div>
